--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -20,5 +20,5 @@ jobs:
 
       - name: Build and push Docker image
         run: |
-          docker build . -t ghcr.io/${{ github.repository_owner }}/app:latest
-          docker push ghcr.io/${{ github.repository_owner }}/app:latest
+          docker build . -t ghcr.io/${{ github.repository }}/app:latest
+          docker push ghcr.io/${{ github.repository }}/app:latest
