--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -9,22 +9,23 @@ jobs:
   build-and-push:
     runs-on: ubuntu-latest
     permissions:
-      packages: write
       contents: read
+      packages: write
+      id-token: write
+
     steps:
       - name: Check out the repo
         uses: actions/checkout@v2
 
       - name: Log in to GitHub Container Registry
-        run: echo "${{ secrets.GHCR_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+        run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
 
       - name: Build and push Docker image
         run: |
-          IMAGE_ID=docker.pkg.github.com/${{ github.repository }}/app
-      
-          # Build the Docker image
-          docker build . -t $IMAGE_ID:latest
-      
-          # Push the Docker image to GitHub Packages
-          docker push $IMAGE_ID:latest
+          IMAGE_ID=ghcr.io/${{ github.repository }}/app
 
+          # Change tags as needed
+          docker build . -t $IMAGE_ID:latest
+          
+          # Push the Docker image to GitHub Container Registry
+          docker push $IMAGE_ID:latest
