--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -24,7 +24,7 @@ jobs:
       with:
         context: .
         push: true
-        tags: ${{ secrets.DOCKER_HUB_USERNAME }}$/docker1:latest
+        tags: ${{ secrets.DOCKERHUB_USERNAME }}/test:1.0
 
 
 
