--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -13,20 +13,27 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
-    - name: Login to Docker Hub
-      uses: docker/login-action@v1
-      with:
-        username: ${{ secrets.DOCKER_HUB_USERNAME }}
-        password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+    - name: Docker login
+      run: echo "${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}" | docker login -u ${{ secrets.DOCKER_HUB_USERNAME }} --password-stdin
 
     - name: Build and push Docker image
       uses: docker/build-push-action@v2
       with:
         context: .
         push: true
-        tags: ${{ secrets.DOCKERHUB_USERNAME }}/test:1.0
+        tags: docker1:latest
 
+    - name: Docker tags
+      run: |
+          docker tag docker1:latest ${{ secrets.DOCKER_HUB_USERNAME }}/docker1:${{ github.run_number }}
+          docker tag docker1:latest ${{ secrets.DOCKER_HUB_USERNAME }}/docker1:${{ github.sha }}
+          docker tag docker1:latest ${{ secrets.DOCKER_HUB_USERNAME }}/docker1:latest
 
+    - name: Docker push
+      run: |
+          docker push ${{ secrets.DOCKER_HUB_USERNAME }}/docker1:${{ github.run_number }}
+          docker push ${{ secrets.DOCKER_HUB_USERNAME }}/docker1:${{ github.sha }}
+          docker push ${{ secrets.DOCKER_HUB_USERNAME }}/docker1:latest
 
     - name: Deploy to Raspberry Pi
       uses: appleboy/ssh-action@master
@@ -35,5 +42,8 @@ jobs:
         username: ${{ secrets.SSH_USER }}
         key: ${{ secrets.SSH_PRIVATE_KEY }}
         script: |
-          docker pull docker1:latest
-          docker run -d --name docker1 --restart always docker1:latest
+          docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/docker1:latest
+          docker run -d --name docker1 --restart always ${{ secrets.DOCKER_HUB_USERNAME }}/docker1:latest
+
+    - name: Docker logout
+      run: docker logout
