--- a/client/package.json
+++ b/client/package.json
@@ -3,15 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf-viewer/default-layout": "^3.12.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.2",
+    "path-browserify": "^1.0.1",
+    "pdfjs-dist": "^4.3.136",
     "pocketbase": "^0.21.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-file-previewer": "^0.6.3",
+    "react-pdf": "^9.0.0",
+    "react-player": "^2.16.0",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
+    "url": "^0.11.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
